WebFrontend: Fixed overwrite of p Element by Swagger css, causing several texts to be unreadable.

--- a/html/admin/css/swagger/screen.css
+++ b/html/admin/css/swagger/screen.css
@@ -138,12 +138,6 @@ div.heading_with_menu ul {
     height: 100px;
 }
 
-p {
-    line-height: 1.4em;
-    padding: 0 0 10px 0;
-    color: #333333;
-}
-
 ol {
     margin: 0px 0 10px 0;
     padding: 0 0 0 18px;
@@ -227,7 +221,6 @@ a.hider {
 
 strong {
     font-family: "Droid Sans", sans-serif;
-    font-weight: bold;
     font-weight: bold;
 }
 
@@ -397,7 +390,7 @@ form.fullwidth ol li.string input, form.fullwidth ol li.url input, form.fullwidt
 }
 
 body {
-    font-family: "Droid Sans", sans-serif;
+  /*  font-family: "Droid Sans", sans-serif; */
 }
 
 body #content_message {
